tests/snapshots/snapshot_tests__random_board_snapshot_173.snap
---
source: tests/snapshot_tests.rs
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : Maexxna
  ? idx: 2
    version: 1
  : Golden Recurring Nightmare
  ? idx: 3
    version: 1
  : Golden Bristleback Knight
  ? idx: 4
    version: 1
  : Fairy Tale Caroler
  ? idx: 5
    version: 1
  : Golden General Drakkisath
  ? idx: 6
    version: 1
  : Stormscale Siren
  ? idx: 7
    version: 1
  : Savannah Highmane
  ? idx: 8
    version: 1
  : Cyborg Drake
  ? idx: 9
    version: 1
  : Peggy Sturdybone
  ? idx: 10
    version: 1
  : Golden Holy Mecherel
  ? idx: 11
    version: 1
  : Salty Looter
  ? idx: 12
    version: 1
  : Sinrunner Blanchy
  ? idx: 13
    version: 1
  : Golden Vigilant Stoneborn
  ? idx: 14
    version: 1
  : Deflect-o-Bot
- - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 3
      source:
        idx: 14
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 1
              version: 1
            amount: 3
            source:
              idx: 14
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 16
      source:
        idx: 2
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 7
              version: 1
            amount: 16
            source:
              idx: 2
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 6
      source:
        idx: 7
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 2
              version: 1
            amount: 6
            source:
              idx: 7
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 12
      source:
        idx: 3
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 2
              version: 1
            amount: 12
            source:
              idx: 3
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 12
      source:
        idx: 3
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 6
              version: 1
            amount: 12
            source:
              idx: 3
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 6
      source:
        idx: 6
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 3
              version: 1
            amount: 6
            source:
              idx: 6
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 2
      source:
        idx: 4
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 13
              version: 1
            amount: 2
            source:
              idx: 4
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 4
      source:
        idx: 13
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 4
              version: 1
            amount: 4
            source:
              idx: 13
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 4
        version: 1
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 5
              version: 1
            amount: 3
            source:
              idx: 8
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 3
              version: 1
            amount: 3
            source:
              idx: 8
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 12
      source:
        idx: 3
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 8
              version: 1
            amount: 12
            source:
              idx: 3
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - AfterAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 4
      source:
        idx: 9
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 14
              version: 1
            amount: 4
            source:
              idx: 9
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 3
      source:
        idx: 14
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 9
              version: 1
            amount: 3
            source:
              idx: 14
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 14
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 14
        version: 1
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 12
      source:
        idx: 10
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 5
              version: 1
            amount: 12
            source:
              idx: 10
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 4
      source:
        idx: 5
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 10
              version: 1
            amount: 4
            source:
              idx: 5
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 11
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 11
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 4
      source:
        idx: 11
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 10
              version: 1
            amount: 4
            source:
              idx: 11
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 12
      source:
        idx: 10
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 11
              version: 1
            amount: 12
            source:
              idx: 10
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - Death:
      minion:
        idx: 11
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 11
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 3
      source:
        idx: 12
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 5
              version: 1
            amount: 3
            source:
              idx: 12
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 4
      source:
        idx: 5
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        TakeDamage:
          event:
            target:
              idx: 12
              version: 1
            amount: 4
            source:
              idx: 5
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 12
        version: 1
  - Death:
      minion:
        idx: 5
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 5
        version: 1
  - AfterAttack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - End: BottomWin

